# monitoring_insights_agent

./: README.md  pyproject.toml
src/: agent.py  main.py  prompts.py
src/tools/: __init__.py  cloudwatch_get_metrics_tool.py  cloudwatch_list_metrics_tool.py  final_answer_tool.py
